test/sema/var_decl.dmz
// RUN: compiler %s -res-dump 2>&1 | filecheck %s
fn foo() -> void {}
fn bar() -> int { return 1; }

fn main() -> void {
    // CHECK: [[# @LINE + 1 ]]:9: error: variable 'x' has invalid 'void' type
    let x: void;

    // CHECK: [[# @LINE + 1 ]]:9: error: variable 'x2' has invalid 'customType' type
    let x2: customType;
    
    // CHECK: [[# @LINE + 1 ]]:22: error: initializer type mismatch
    let x3: int = foo();

    let x4: int;
    
    let x5: int = bar();

    // CHECK: [[# @LINE + 1 ]]:19: error: symbol 'y' not found
    let x6: int = y;
}
// CHECK-NOT: {{.*}}
